# rpg-maker-clone

./: .clang-format  .clinerules  .envrc  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  README.md  build_config.rb  flake.nix
.github/workflows/: build.yml
3rd/: shinonome-0.9.11-src.tar.bz2
3rd/shinonome-0.9.11-src/: Makefile.in  autogen.sh  configure  configure.in  fonts.alias.in
3rd/shinonome-0.9.11-src/tools/: bdf2bit.in  bdfmerge.in  mkitalic.in
docs/: README.md  TODO.md
include/: lv_conf.h
mruby-lcf/: cp932_to_unicode.rb  mrbgem.rake
mruby-lcf/mrblib/: lcf.rb  schema.rb
mruby-lcf/src/: lcf.cxx
mruby-lcf/test/: lcf_test.rb
mruby-rgss/: gen_shinonome_data.rb  mrbgem.rake
mruby-rgss/mrblib/: lib.rb
mruby-rgss/src/: lib.cxx
mruby-rgss/test/: test.rb
mruby-rpg2k/: main.rb  mrbgem.rake
mruby-rpg2k/mrblib/: main.rb
mruby-rpg2k/src/: rgss_ext.cxx
mruby-rpgxp/: mrbgem.rake
mruby-rpgxp/mrblib/: lib.rb
scripts/: .gitignore  Dockerfile  download-nepheshel.bash  rtp_install.bash  rtp_xp_install.bash  run-clang-format.bash  run-cmake-format.bash  setup.iss  take_title_screenshot.bash
src/: main.cc  main.cxx
